# fave-recode

./: .gitignore  .nojekyll  .pre-commit-config.yaml  README.md  README.qmd  cmu2labov.yml  cmu2phila.yml  dev.txt  index.html  objects.inv  pyproject.toml  requirements.txt  robots.txt  search.json  sitemap.xml
.github/workflows/: build-docs.yml  test-and-run.yml
doc_src/: _quarto.yml  _sidebar.yml  objects.json
doc_src/reference/: fave_recode.qmd  index.qmd  relations.qmd  rule_classes.Condition.qmd  rule_classes.Rule.qmd  rule_classes.RuleSet.qmd  rule_classes.qmd
docs/: .gitignore  _quarto.yml  objects.json  objects.py
docs/getting-started/: condition-attributes.qmd  condition-relations.qmd  directory.qmd  label_set_parser.qmd  overview.qmd  rule-application.qmd  rule-scheme-basics.qmd  single-file.qmd
docs/reference/: _sidebar.yml  fave_recode.relations.contains_relation.qmd  fave_recode.relations.equals_relation.qmd  fave_recode.relations.excludes_relation.qmd  fave_recode.relations.in_relation.qmd  fave_recode.relations.negate.qmd  fave_recode.relations.not_in_relation.qmd  fave_recode.relations.rematches_relation.qmd  index.qmd  labelset_parser.LabelSetParser.qmd  labelset_parser.LabelSetParserProperties.qmd  relations.equals_relation.qmd  relations.in_relation.qmd  relations.not_equals_relation.qmd  relations.not_in_relation.qmd  relations.qmd  relations.rematches_relation.qmd  relations.reunmatches_relation.qmd  rule_classes.Rule.qmd  rule_classes.RuleSet.qmd
docs/styles/: light.scss
fave_recode/: fave_recode.py  relations.py  rule_classes.py  ruleschema.py
getting-started/: condition-attributes.html  condition-relations.html  directory.html  label_set_parser.html  overview.html  rule-application.html  rule-scheme-basics.html  single-file.html
reference/: fave_recode.relations.contains_relation.html  fave_recode.relations.equals_relation.html  fave_recode.relations.excludes_relation.html  fave_recode.relations.in_relation.html  fave_recode.relations.negate.html  fave_recode.relations.not_in_relation.html  fave_recode.relations.rematches_relation.html  index.html  labelset_parser.LabelSetParser.html  labelset_parser.LabelSetParserProperties.html  relations.equals_relation.html  relations.html  relations.in_relation.html  relations.not_equals_relation.html  relations.not_in_relation.html  relations.rematches_relation.html  relations.reunmatches_relation.html  rule_classes.Condition.html  rule_classes.Rule.html  rule_classes.RuleSet.html
site_libs/bootstrap/: bootstrap-2c3db725d49afb0f2aa5bacff08d5df9.min.css  bootstrap-9449dd2e3890af7aae52c992c0aa4764.min.css  (+2 more)
src/fave_recode/: fave_recode.py  relations.py  (+4 more)
tests/: test_cli.py  test_parser.py  test_relations.py  test_resources.py  test_rules.py
(+7 files in other folders)
