[tool.poetry]
name = "fave-recode"
version = "0.1.0"
description = ""
authors = ["JoFrhwld <JoFrhwld@gmail.com>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "fave_recode"}]

[tool.poetry.dependencies]
python = "^3.10"
aligned-textgrid = "^0.2.1"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pytest = "^7.2.1"
polars = "^0.16.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
