[tool.poetry]
name = "fave-recode"
version = "0.1.0"
description = ""
authors = ["JoFrhwld <JoFrhwld@gmail.com>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "fave_recode", from="src"}]
exclude = [
    ".github/",
    "docs/",
    "doc_src/"
]

[tool.poetry.dependencies]
python = "^3.10"
aligned-textgrid = "^v0.4.1"
pyyaml = "^6.0"
cerberus = "^1.3.5"
click = "^8.1.7"
cloup = "^3.0.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pytest = "^7.2.1"
pytest-cov = "^4.1.0"
importlib = "^1.0.4"
pre-commit = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--cov-config=.coveragerc",
    "--cov"
]
filterwarnings =[
    "ignore::UserWarning"
]
pythonpath = "src"
testpaths = "tests"

[tool.poetry.scripts]
fave_recode = 'fave_recode.fave_recode:fave_recode'