[tool.poetry]
name = "fave-recode"
version = "0.3.2"
description = "A package for recoding Praat TextGrids"
authors = ["JoFrhwld <JoFrhwld@gmail.com>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "fave_recode", from="src"}]
exclude = [
    ".github/",
    "docs/",
    "doc_src/"
]
homepage = "https://forced-alignment-and-vowel-extraction.github.io/fave-recode"
repository = "https://github.com/Forced-Alignment-and-Vowel-Extraction/fave-recode"

[tool.poetry.dependencies]
python = "^3.10"
aligned-textgrid = "^0.7.8"
pyyaml = "^6.0"
cerberus = "^1.3.5"
click = "^8.1.7"
cloup = "^3.0.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
importlib = "^1.0.4"

[tool.poetry.group.test.dependencies]
pytest = "<8.0.0"
pytest-cov = "^4.1.0"

[tool.poetry.group.docs.dependencies]
quartodoc = "^0.6.5"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--cov-config=.coveragerc",
    "--cov",
    "--cov-report=xml:cov.xml"
]
filterwarnings =[
    "ignore::UserWarning"
]
pythonpath = "src"
testpaths = "tests"

[tool.poetry.scripts]
fave_recode = 'fave_recode.fave_recode:fave_recode'